# agentic-ancient-alien

./: .env.example  .gitignore  .replit  AUTOMATION_SETUP.md  Anchor.toml  Cargo.toml  DEPLOYMENT.md  HACKATHON_SUBMISSION.md  Makefile  README.md  package.json  replit.md  tsconfig.json
.github/workflows/: agent-loop.yml  ci.yml  contract-scanner.yml  security-audit.yml
attached_assets/: Pasted-Echo-Null-2200-2025-Rift-rename-executed-Achilles-falls_1769522858610.txt  README_1775292117771.md  branding-1769975155901.json  branding-1770029658881.json  content-1769975176483.md  content-1770029663967.md
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: CyberCard.tsx  GlitchText.tsx  OmegaPrimePanel.tsx  RalphAgentPanel.tsx  SelfLearningPanel.tsx  TokenPromoterPanel.tsx  WalletButton.tsx  ZeroCostRelayerPanel.tsx
client/src/hooks/: use-signals.ts
client/src/pages/: Home.tsx
programs/agentic_futarchy/: Cargo.toml
programs/agentic_futarchy/src/: lib.rs
scripts/: agent-researcher.ts  deploy-devnet.sh  multisig-checker.ts  ownership-transfer.ts  pda-mapper.ts  run-all-scanners.sh  scan-programs.ts  setup.sh
scripts/controller/: check-authority.ts  create-market.ts  initialize.ts  resolve-market.ts  transfer-authority.ts
server/: ralph-agent.ts  routes.ts  self-learning-agent.ts  solana.ts  storage.ts  token-promoter.ts
shared/: routes.ts  schema.ts
